# aidu-ai-actor

./: Makefile  README.md  pyproject.toml
src/aidu/ai/actor/: __init__.py  actor.py  config.py  frontend_actor.py  message.py  service.py  turn_scope.py
src/aidu/ai/actor/demo/: actor.py  app.js  app.py  index.html
src/aidu/ai/actor/demo/assets/: index-BcEnWX_D.js  index-Beb7Eb2i.js  index-CLzBAUOM.css  index-CqZ0GeWA.css
test/: curl.sh
tests/: belief_profiles.json  curl.sh  prompt_test.json  test_run_request.py
