[project]
name = "aidu-ai-actor"
version = "0.1.0"
description = "A Python package for AIDu actors."
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "aidu-support",
    "aidu-ai-controller",

    "pydantic>=2.0",
    "rich>=14.3.2",

    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    "python-dotenv>=0.19.0,<1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pluggy>=1.0",
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = { "src" = "" }
packages = ["src/aidu/ai/actor"]

# -------------------------------------------------------------------
# Local workspace sources
# -------------------------------------------------------------------

[tool.uv.sources]
aidu-ai-controller = { path = "../aidu-ai-controller", editable = true }
aidu-support = { path = "../aidu-support", editable = true }
aidu-ai-llm = { path = "../aidu-ai-llm", editable = true }
# Ensure local project source is available to the uv runner in editable mode
aidu-ai-actor = { path = ".", editable = true }

# -------------------------------------------------------------------
# Linter / formatter configuration
# -------------------------------------------------------------------

[tool.ruff]
line-length = 180
exclude = ["__pycache__", "build", "dist", ".venv"]

[tool.black]
line-length = 180
target-version = ["py311"]